--- a/index.html
+++ b/index.html
@@ -293,27 +293,27 @@
         const database = [
             { id: 1, type: '線蟲', img: "images/1.jpg", ans: ["Bursa copulatory of Angiostrongylus cantonensis", "male of Angiostrongylus cantonensis", "Spicule of Angiostrongylus cantonensis"], desc: "" },
             { id: 2, type: '線蟲', img: "images/2.jpg", ans: ["Female of Angiostrongylus cantonensis", "Posterior portion of Angiostrongylus cantonensis"], desc: "" },
-            { id: 3, type: '線蟲', img: "images/3.jpg", ans: ["anterior end of anisakis spp."], desc: "" },
-            { id: 4, type: '線蟲', img: "images/4.jpg", ans: ["terminal spine of anisakis spp."], desc: "" },
+            { id: 3, type: '線蟲', img: "images/3.jpg", ans: ["anterior end of Anisakis spp.", "boring tooth of Anisakis spp."], desc: "" },
+            { id: 4, type: '線蟲', img: "images/4.jpg", ans: ["terminal spine of Anisakis spp."], desc: "" },
             { id: 5, type: '線蟲', img: "images/5.jpg", ans: ["Egg of Trichuris trichiura"], desc: "" },
             { id: 6, type: '線蟲', img: "images/6.jpg", ans: ["Cyst of Trichinella Spiralis"], desc: "" },
-            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of trichiris trichiura"], desc: "" },
-            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of trichiris trichiura"], desc: "" },
+            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of Trichuris trichiura"], desc: "" },
+            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of Trichuris trichiura"], desc: "" },
             { id: 9, type: '線蟲', img: "images/9.jpg", ans: ["Egg of Enterobius vermicularis"], desc: "" },
             { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg Egg of Enterobius vermicularis"], desc: "" },
-            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of enterobius vermicularis", "female adult of enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "" },
-            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of ascaris lumbricoides"], desc: "" },
-            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of ascaris lumbricoides"], desc: "" },
-            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["embryonated egg of ascaris lumbricoides"], desc: "" },
+            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of Enterobius vermicularis", "female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "" },
+            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of Ascaris lumbricoides"], desc: "" },
+            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of Ascaris lumbricoides"], desc: "" },
+            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["embryonated egg of Ascaris lumbricoides"], desc: "" },
             { id: 15, type: '線蟲', img: "images/15.jpg", ans: ["embryonated egg of hookworm"], desc: "" },
             { id: 16, type: '線蟲', img: "images/16.jpg", ans: ["egg of hookworm"], desc: "" },
             { id: 17, type: '線蟲', img: "images/17.jpg", ans: ["Buccal capsule of Ancylostoma duodenale"], desc: "" },
             { id: 18, type: '線蟲', img: "images/18.jpg", ans: ["Buccal capsule of Necator americanus"], desc: "" },
-            { id: 19, type: '線蟲', img: "images/19.jpg", ans: ["Filariform larva of strongyloides stercoralis"], desc: "" },
+            { id: 19, type: '線蟲', img: "images/19.jpg", ans: ["Filariform larva of Strongyloides stercoralis"], desc: "" },
             { id: 20, type: '線蟲', img: "images/20.jpg", ans: ["Filariform Larva of Necator americanus"], desc: "" },
             { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform Larva of Ancylostoma duodenale"], desc: "" },
-            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of wuchereria bancrofti"], desc: "" },
-            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of brugia malayi"], desc: "" },
+            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of Wuchereria bancrofti"], desc: "" },
+            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of Brugia malayi"], desc: "" },
             { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis Buski"], desc: "" },
             { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "" },
             { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "" },
@@ -809,3 +809,4 @@
     </script>
 </body>
 </html>
+
