--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>寄生蟲超人</title>
+    <title>蟲蟲危機</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; display: flex; flex-direction: column; align-items: center; min-height: 100vh; margin: 0; padding-bottom: 50px; }
         h2 { color: #333; margin: 20px 0; }
@@ -155,7 +155,7 @@
 <body>
 
     <div id="login-section" class="section active">
-        <h2>🔬 搶救寄生蟲大作戰</h2>
+        <h2>🤡 搶救寄生蟲大作戰</h2>
         <div class="login-box">
             
             <p>選擇練習範圍</p>
@@ -809,4 +809,5 @@
     </script>
 </body>
 </html>
+
 
