--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
             <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
 
-            <p>輸入暱稱</p>
+            <p>輸入暱稱(計時才需要)</p>
             <input type="text" id="nickname" placeholder="...." maxlength="10">
             
             <div class="btn-group">
@@ -954,3 +954,4 @@
     </script>
 </body>
 </html>
+
