--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
             <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
 
-            <p>輸入暱稱</p>
+            <p>輸入暱稱(計時才須用)</p>
             <input type="text" id="nickname" placeholder="...." maxlength="10">
             
             <div class="btn-group">
@@ -1005,3 +1005,4 @@
     </script>
 </body>
 </html>
+
