--- a/index.html
+++ b/index.html
@@ -460,25 +460,25 @@
             { id: 2, type: '線蟲', img: "images/2.jpg", ans: ["Female of Angiostrongylus cantonensis", "Posterior portion of Angiostrongylus cantonensis"], desc: "廣東住血線蟲 L5雌蟲 尾部整體呈溜滑梯狀" },
             { id: 3, type: '線蟲', img: "images/3.jpg", ans: ["anterior end of Anisakis spp.", "boring tooth of Anisakis spp."], desc: "海獸胃線蟲 前端有boring tooth鑽洞齒，與頭端呈切線方向" },
             { id: 4, type: '線蟲', img: "images/4.jpg", ans: ["terminal spine of Anisakis spp."], desc: "海獸胃線蟲 尾刺與尾端垂直" },
-            { id: 5, type: '線蟲', img: "images/5.jpg", ans: ["Egg of Trichuris trichiura"], desc: "" },
-            { id: 6, type: '線蟲', img: "images/6.jpg", ans: ["Cyst of Trichinella Spiralis"], desc: "" },
-            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of Trichuris trichiura"], desc: "" },
-            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of Trichuris trichiura"], desc: "" },
-            { id: 9, type: '線蟲', img: "images/9.jpg", ans: ["Egg of Enterobius vermicularis"], desc: "" },
-            { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg Egg of Enterobius vermicularis"], desc: "" },
-            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of Enterobius vermicularis", "female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "" },
-            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of Ascaris lumbricoides"], desc: "" },
-            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of Ascaris lumbricoides"], desc: "" },
-            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["embryonated egg of Ascaris lumbricoides"], desc: "" },
-            { id: 15, type: '線蟲', img: "images/15.jpg", ans: ["embryonated egg of hookworm"], desc: "" },
-            { id: 16, type: '線蟲', img: "images/16.jpg", ans: ["egg of hookworm"], desc: "" },
-            { id: 17, type: '線蟲', img: "images/17.jpg", ans: ["Buccal capsule of Ancylostoma duodenale"], desc: "" },
-            { id: 18, type: '線蟲', img: "images/18.jpg", ans: ["Buccal capsule of Necator americanus"], desc: "" },
-            { id: 19, type: '線蟲', img: "images/19.jpg", ans: ["Filariform larva of Strongyloides stercoralis"], desc: "" },
-            { id: 20, type: '線蟲', img: "images/20.jpg", ans: ["Filariform Larva of Necator americanus"], desc: "" },
-            { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform Larva of Ancylostoma duodenale"], desc: "" },
-            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of Wuchereria bancrofti"], desc: "" },
-            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of Brugia malayi"], desc: "" },
+            { id: 5, type: '線蟲', img: "images/5.jpg", ans: ["Egg of Trichuris trichiura"], desc: "鞭蟲卵 Barrel-shaped 酒桶狀、厚卵殼(轉動時會像兩條線的膜)、無橫紋" },
+            { id: 6, type: '線蟲', img: "images/6.jpg", ans: ["Cyst of Trichinella Spiralis"], desc: "旋毛蟲" },
+            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of Trichuris trichiura"], desc: "雄鞭蟲 頭細 尾端有尖尖的交尾刺" },
+            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of Trichuris trichiura"], desc: "雌鞭蟲成蟲 頭細 尾圓鈍" },
+            { id: 9, type: '線蟲', img: "images/9.jpg", ans: ["Egg of Enterobius vermicularis"], desc: "蟯蟲卵 雙層殼且不對稱 =  一邊扁一邊凸" },
+            { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg Egg of Enterobius vermicularis"], desc: "蟯蟲胎蟲卵 卵殼中出現胎蟲(一或多條摺痕)" },
+            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of Enterobius vermicularis", "female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "蟯蟲的雌成蟲 頭端兩側有角質化鼓起的側翼 顯微鏡下呈紅色" },
+            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of Ascaris lumbricoides"], desc: "受精蛔蟲卵 外型圓，卵細胞顆粒細小且排列緊密，波浪狀外膜分布均勻" },
+            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of Ascaris lumbricoides"], desc: "未受精蛔蟲卵 外型橢圓，卵細胞顆粒較粗大且排列較鬆散，波浪狀外膜較不平" },
+            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["embryonated egg of Ascaris lumbricoides"], desc: "蛔蟲胎蟲卵 蟲體蜷曲在蟲卵內，再加上波浪狀外膜確定是蛔蟲" },
+            { id: 15, type: '線蟲', img: "images/15.jpg", ans: ["embryonated egg of hookworm"], desc: "蛔蟲胎蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
+            { id: 16, type: '線蟲', img: "images/16.jpg", ans: ["egg of hookworm"], desc: "蛔蟲蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
+            { id: 17, type: '線蟲', img: "images/17.jpg", ans: ["Buccal capsule of Ancylostoma duodenale"], desc: "看到尖牙就可以確定是十二指腸鉤蟲" },
+            { id: 18, type: '線蟲', img: "images/18.jpg", ans: ["Buccal capsule of Necator americanus"], desc: "無牙齒、有倒V字形切板者為美洲鉤蟲" },
+            { id: 19, type: '線蟲', img: "images/19.jpg", ans: ["Filariform larva of Strongyloides stercoralis"], desc: "糞小桿線蟲F-form 沒有外鞘結構，且末端不會形成細尖、鈍或是倒V" },
+            { id: 20, type: '線蟲', img: "images/20.jpg", ans: ["Filariform Larva of Necator americanus"], desc: "美洲鉤蟲F-form 有外鞘+有明顯橫紋(striation)" },
+            { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform Larva of Ancylostoma duodenale"], desc: "十二指腸鉤蟲F-form 有外鞘+但不具有橫紋" },
+            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of Wuchereria bancrofti"], desc: "班氏絲蟲微絲蟲 蟲體捲曲度不大" },
+            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of Brugia malayi"], desc: "馬來絲蟲微絲蟲 非常捲曲" },
             { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis Buski"], desc: "" },
             { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "" },
             { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "" },
@@ -1005,5 +1005,6 @@
     </script>
 </body>
 </html>
+
 
 
