--- a/index.html
+++ b/index.html
@@ -479,21 +479,21 @@
             { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform Larva of Ancylostoma duodenale"], desc: "十二指腸鉤蟲F-form 有外鞘+但不具有橫紋" },
             { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of Wuchereria bancrofti"], desc: "班氏絲蟲微絲蟲 蟲體捲曲度不大" },
             { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of Brugia malayi"], desc: "馬來絲蟲微絲蟲 非常捲曲" },
-            { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis Buski"], desc: "" },
-            { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "" },
-            { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "" },
-            { id: 27, type: '吸蟲', img: "images/27.jpg", ans: ["Adult worm of Echinostoma revolutum"], desc: "" },
-            { id: 28, type: '吸蟲', img: "images/28.jpg", ans: ["Egg of Paragonimus westermani"], desc: "" },
-            { id: 29, type: '吸蟲', img: "images/29.jpg", ans: ["Adult worm of Paragonimus westermani"], desc: "" },
+            { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis Buski"], desc: "薑片蟲蟲卵 長橢圓形，淡黃色或黃色，薄殼，內部有一顆一顆的卵細胞" },
+            { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "薑片蟲成蟲 腸道最大隻的吸蟲(只能看到約2/3的蟲體)" },
+            { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "橫川異形吸蟲成蟲 中間藍色卵巢(?) 尾端兩顆淡黃藍圓睪丸 " },
+            { id: 27, type: '吸蟲', img: "images/27.jpg", ans: ["Adult worm of Echinostoma revolutum"], desc: "外旋棘口吸蟲成蟲 腹吸盤在中間靠前" },
+            { id: 28, type: '吸蟲', img: "images/28.jpg", ans: ["Egg of Paragonimus westermani"], desc: "衛氏肺吸蟲卵 和薑片蟲卵類似，最大的不同就在於衛氏肺吸蟲有明顯卵蓋、且卵比較小" },
+            { id: 29, type: '吸蟲', img: "images/29.jpg", ans: ["Adult worm of Paragonimus westermani"], desc: "衛氏肺吸蟲成蟲" },
             { id: 30, type: '吸蟲', img: "images/30.jpg", ans: ["Section of liver infected with Paragonimus westermani"], desc: "" },
-            { id: 31, type: '吸蟲', img: "images/31.jpg", ans: ["Adult worm of Fasciola hepatica"], desc: "" },
-            { id: 32, type: '吸蟲', img: "images/32.jpg", ans: ["Adult worm of Clonorchis sinensis"], desc: "" },
-            { id: 33, type: '吸蟲', img: "images/33.jpg", ans: ["Egg of Clonorchis sinensis"], desc: "" },
-            { id: 34, type: '吸蟲', img: "images/34.jpg", ans: ["Egg of Schistosoma haematobium"], desc: "" },
-            { id: 35, type: '吸蟲', img: "images/35.jpg", ans: ["Egg of Schistosoma mansoni"], desc: "" },
-            { id: 36, type: '吸蟲', img: "images/36.jpg", ans: ["Egg of Schistosoma japonicum"], desc: "" },
-            { id: 37, type: '吸蟲', img: "images/37.jpg", ans: ["Adult male of Schistosoma mansoni"], desc: "" },
-            { id: 38, type: '吸蟲', img: "images/38.jpg", ans: ["Adult female of Schistosoma mansoni"], desc: "" },
+            { id: 31, type: '吸蟲', img: "images/31.jpg", ans: ["Adult worm of Fasciola hepatica"], desc: "牛羊肝吸蟲成蟲 一坨黑黑的子宮" },
+            { id: 32, type: '吸蟲', img: "images/32.jpg", ans: ["Adult worm of Clonorchis sinensis"], desc: "中華肝吸蟲的成蟲 生殖器官分隔明確" },
+            { id: 33, type: '吸蟲', img: "images/33.jpg", ans: ["Egg of Clonorchis sinensis"], desc: "中華肝吸蟲蟲卵 小型吸蟲卵 長橢圓形、厚殼" },
+            { id: 34, type: '吸蟲', img: "images/34.jpg", ans: ["Egg of Schistosoma haematobium"], desc: "埃及血吸蟲卵 紡錘形外觀，末端有terminal spine" },
+            { id: 35, type: '吸蟲', img: "images/35.jpg", ans: ["Egg of Schistosoma mansoni"], desc: "曼森血吸蟲卵 有lateral spine" },
+            { id: 36, type: '吸蟲', img: "images/36.jpg", ans: ["Egg of Schistosoma japonicum"], desc: "日本血吸蟲卵 非紡錘形，也沒有spine；裡面是幼蟲，並非卵細胞，故可以以此判斷血吸蟲" },
+            { id: 37, type: '吸蟲', img: "images/37.jpg", ans: ["Adult male of Schistosoma mansoni"], desc: "曼森血吸蟲雄蟲  頭端有向外凸出的吸盤" },
+            { id: 38, type: '吸蟲', img: "images/38.jpg", ans: ["Adult female of Schistosoma mansoni"], desc: "曼森血吸蟲雌蟲 較細長、吸盤不明顯" },
             { id: 39, type: '原蟲', img: "images/39.jpg", ans: ["Cyst of Entamoeba coli", "Cyst form of Entamoeba coli"], desc: "" },
             { id: 41, type: '原蟲', img: "images/41.jpg", ans: ["Cyst of Endolimax nana", "Cyst form of Endolimax nana"], desc: "" },
             { id: 42, type: '原蟲', img: "images/42.jpg", ans: ["Cyst of Entamoeba histolytica", "Cyst form of Entamoeba histolytica"], desc: "" },
@@ -1005,6 +1005,7 @@
     </script>
 </body>
 </html>
+
 
 
 
