--- a/index.html
+++ b/index.html
@@ -494,35 +494,35 @@
             { id: 36, type: '吸蟲', img: "images/36.jpg", ans: ["Egg of Schistosoma japonicum"], desc: "日本血吸蟲卵 非紡錘形，也沒有spine；裡面是幼蟲，並非卵細胞，故可以以此判斷血吸蟲" },
             { id: 37, type: '吸蟲', img: "images/37.jpg", ans: ["Adult male of Schistosoma mansoni"], desc: "曼森血吸蟲雄蟲  頭端有向外凸出的吸盤" },
             { id: 38, type: '吸蟲', img: "images/38.jpg", ans: ["Adult female of Schistosoma mansoni"], desc: "曼森血吸蟲雌蟲 較細長、吸盤不明顯" },
-            { id: 39, type: '原蟲', img: "images/39.jpg", ans: ["Cyst of Entamoeba coli", "Cyst form of Entamoeba coli"], desc: "" },
-            { id: 41, type: '原蟲', img: "images/41.jpg", ans: ["Cyst of Endolimax nana", "Cyst form of Endolimax nana"], desc: "" },
-            { id: 42, type: '原蟲', img: "images/42.jpg", ans: ["Cyst of Entamoeba histolytica", "Cyst form of Entamoeba histolytica"], desc: "" },
+            { id: 39, type: '原蟲', img: "images/39.jpg", ans: ["Cyst of Entamoeba coli", "Cyst form of Entamoeba coli"], desc: "大腸阿米巴的囊體 5顆以上的核就能夠判斷為大腸阿米巴" },
+            { id: 41, type: '原蟲', img: "images/41.jpg", ans: ["Cyst of Endolimax nana", "Cyst form of Endolimax nana"], desc: "微小阿米巴的囊體 ，四顆細胞核都像魚眼睛(??)；痢疾阿米巴的中間有機會看到兩條棒狀染色體，但微小阿米巴只會看到四顆細胞核" },
+            { id: 42, type: '原蟲', img: "images/42.jpg", ans: ["Cyst of Entamoeba histolytica", "Cyst form of Entamoeba histolytica"], desc: "痢疾阿米巴的囊體 兩顆細胞核)與棒狀染色體" },
             { id: 43, type: '原蟲', img: "images/43.jpg", ans: ["Trophozoite of Entamoeba histolytica", "Trophozoite form of Entamoeba histolytica"], desc: "" },
             { id: 44, type: '原蟲', img: "images/44.jpg", ans: ["Cyst of Iodamoeba butschlii", "Cyst form of Iodamoeba butschlii"], desc: "" },
-            { id: 45, type: '原蟲', img: "images/45.jpg", ans: ["Cyst of Balantidium coli", "Cyst form of Balantidium coli"], desc: "" },
-            { id: 46, type: '原蟲', img: "images/46.jpg", ans: ["Trophozoite of Balantidium coli", "Trophozoite form of Balantidium coli"], desc: "" },
-            { id: 47, type: '原蟲', img: "images/47.jpg", ans: ["Cyst of Giardia lamblia", "Cyst form of Giardia lamblia"], desc: "" },
-            { id: 48, type: '原蟲', img: "images/48.jpg", ans: ["Trophozoite of Giardia lamblia", "Trophozoite form of Giardia lamblia"], desc: "" },
-            { id: 49, type: '原蟲', img: "images/49.jpg", ans: ["Trophozoite of Trichomonas vaginalis", "Trophozoite form of Trichomonas vaginalis"], desc: "" },
-            { id: 50, type: '原蟲', img: "images/50.jpg", ans: ["Amastigote of Leishmania spp.", "Amastigote form of Leishmania spp."], desc: "" },
-            { id: 51, type: '原蟲', img: "images/51.jpg", ans: ["Promastigote of Leishmania spp.", "Promastigote form of Leishmania spp."], desc: "" },
-            { id: 52, type: '原蟲', img: "images/52.jpg", ans: ["Trypomastigote of Trypanosoma spp.", "Trypomastigote form of Trypanosoma spp."], desc: "" },
-            { id: 53, type: '原蟲', img: "images/53.jpg", ans: ["Early trophozoite of Plasmodium vivax", "Early trophozoite form of Plasmodium vivax"], desc: "" },
-            { id: 54, type: '原蟲', img: "images/54.jpg", ans: ["Mature trophozoite of Plasmodium vivax", "Mature trophozoite form of Plasmodium vivax"], desc: "" },
-            { id: 55, type: '原蟲', img: "images/55.jpg", ans: ["Early trophozoite of Plasmodium falciparum", "Early trophozoite form of Plasmodium falciparum"], desc: "" },
-            { id: 56, type: '原蟲', img: "images/56.jpg", ans: ["Trophozoite of Toxoplasma gondii", "Trophozoite form of Toxoplasma gondii"], desc: "" },
-            { id: 57, type: '絛蟲', img: "images/57.jpg", ans: ["Egg of Diphyllobothrium latum"], desc: "" },
-            { id: 58, type: '絛蟲', img: "images/58.jpg", ans: ["Gravid proglottid of Diphyllobothrium latum"], desc: "" },
-            { id: 59, type: '絛蟲', img: "images/59.jpg", ans: ["Egg of Taenia spp."], desc: "" },
-            { id: 60, type: '絛蟲', img: "images/60.jpg", ans: ["Gravid proglottid of Taenia solium"], desc: "" },
-            { id: 61, type: '絛蟲', img: "images/61.jpg", ans: ["Gravid proglottid of Taenia saginata"], desc: "" },
-            { id: 62, type: '絛蟲', img: "images/62.jpg", ans: ["Scolex of Taenia solium"], desc: "" },
-            { id: 63, type: '絛蟲', img: "images/63.jpg", ans: ["Egg of Hymenolepis diminuta"], desc: "" },
-            { id: 64, type: '絛蟲', img: "images/64.jpg", ans: ["Egg of Hymenolepis nana"], desc: "" },
-            { id: 65, type: '絛蟲', img: "images/65.jpg", ans: ["Egg of Dipylidium caninum"], desc: "" },
-            { id: 66, type: '絛蟲', img: "images/66.jpg", ans: ["Proglottid of Dipylidium caninum"], desc: "" },
-            { id: 67, type: '絛蟲', img: "images/67.jpg", ans: ["Hydatid cyst of Echinococcus granulosus"], desc: "" },
-            { id: 68, type: '絛蟲', img: "images/68.jpg", ans: ["Protoscolex of Echinococcus granulosus"], desc: "" }
+            { id: 45, type: '原蟲', img: "images/45.jpg", ans: ["Cyst of Balantidium coli", "Cyst form of Balantidium coli"], desc: "大腸纖毛蟲的囊體 形狀接近圓球狀" },
+            { id: 46, type: '原蟲', img: "images/46.jpg", ans: ["Trophozoite of Balantidium coli", "Trophozoite form of Balantidium coli"], desc: "大腸纖毛蟲的活動體 形狀呈橢圓狀 " },
+            { id: 47, type: '原蟲', img: "images/47.jpg", ans: ["Cyst of Giardia lamblia", "Cyst form of Giardia lamblia"], desc: "梨形鞭毛蟲的囊體 中間有一中柱把四顆核兩兩隔開" },
+            { id: 48, type: '原蟲', img: "images/48.jpg", ans: ["Trophozoite of Giardia lamblia", "Trophozoite form of Giardia lamblia"], desc: "梨形鞭毛蟲的活動體 一端鈍一端細尖、明顯兩個核" },
+            { id: 49, type: '原蟲', img: "images/49.jpg", ans: ["Trophozoite of Trichomonas vaginalis", "Trophozoite form of Trichomonas vaginalis"], desc: "陰道滴蟲的活動體 外型水滴狀、單核" },
+            { id: 50, type: '原蟲', img: "images/50.jpg", ans: ["Amastigote of Leishmania spp.", "Amastigote form of Leishmania spp."], desc: "利什曼蟲的無鞭毛體 " },
+            { id: 51, type: '原蟲', img: "images/51.jpg", ans: ["Promastigote of Leishmania spp.", "Promastigote form of Leishmania spp."], desc: "利什曼蟲的前鞭毛體" },
+            { id: 52, type: '原蟲', img: "images/52.jpg", ans: ["Trypomastigote of Trypanosoma spp.", "Trypomastigote form of Trypanosoma spp."], desc: "錐蟲的錐鞭毛體 背景中的圓圈是紅血球、" },
+            { id: 53, type: '原蟲', img: "images/53.jpg", ans: ["Early trophozoite of Plasmodium vivax", "Early trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲早期活動體 跟其他瘧原蟲比起來,間日瘧原蟲的環較大圈" },
+            { id: 54, type: '原蟲', img: "images/54.jpg", ans: ["Mature trophozoite of Plasmodium vivax", "Mature trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲成熟的活動體 明顯的薛氏點(Schuffner’s dots)," },
+            { id: 55, type: '原蟲', img: "images/55.jpg", ans: ["Early trophozoite of Plasmodium falciparum", "Early trophozoite form of Plasmodium falciparum"], desc: "惡性瘧原蟲早期活動體 考跑台時若是看到一個紅血球中有兩隻蟲，就寫惡性瘧原蟲、戒指環也比較小一點" },
+            { id: 56, type: '原蟲', img: "images/56.jpg", ans: ["Trophozoite of Toxoplasma gondii", "Trophozoite form of Toxoplasma gondii"], desc: "弓蟲活動體" },
+            { id: 57, type: '絛蟲', img: "images/57.jpg", ans: ["Egg of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的蟲卵 外觀呈橢圓、卵圓形，有許多卵細胞、頭端有裂縫=卵蓋 (微調焦距)" },
+            { id: 58, type: '絛蟲', img: "images/58.jpg", ans: ["Gravid proglottid of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的受孕體節" },
+            { id: 59, type: '絛蟲', img: "images/59.jpg", ans: ["Egg of Taenia spp."], desc: "有鉤絛蟲卵 像甜甜圈、輪胎 " },
+            { id: 60, type: '絛蟲', img: "images/60.jpg", ans: ["Gravid proglottid of Taenia solium"], desc: "受孕體節+有鉤絛蟲 Taenia solium 分支數較少；Taenia saginata 分支數較多" },
+            { id: 61, type: '絛蟲', img: "images/61.jpg", ans: ["Gravid proglottid of Taenia saginata"], desc: "受孕體節+無鉤絛蟲 Taenia solium 分支數較少；Taenia saginata 分支數較多" },
+            { id: 62, type: '絛蟲', img: "images/62.jpg", ans: ["Scolex of Taenia solium"], desc: "有鉤絛蟲的頭節 圓形吸盤(4個) " },
+            { id: 63, type: '絛蟲', img: "images/63.jpg", ans: ["Egg of Hymenolepis diminuta"], desc: "縮小包膜絛蟲 正圓形" },
+            { id: 64, type: '絛蟲', img: "images/64.jpg", ans: ["Egg of Hymenolepis nana"], desc: "短小包膜絛蟲 橢圓形 " },
+            { id: 65, type: '絛蟲', img: "images/65.jpg", ans: ["Egg of Dipylidium caninum"], desc: "犬複殖器絛蟲的卵 capsule相對比較大、長得像葡萄" },
+            { id: 66, type: '絛蟲', img: "images/66.jpg", ans: ["Proglottid of Dipylidium caninum"], desc: "犬複殖器絛蟲的體節 " },
+            { id: 67, type: '絛蟲', img: "images/67.jpg", ans: ["Hydatid cyst of Echinococcus granulosus"], desc: "單胞絛蟲的水囊" },
+            { id: 68, type: '絛蟲', img: "images/68.jpg", ans: ["Protoscolex of Echinococcus granulosus"], desc: "單胞絛蟲的原始頭節 " }
         ];
         // ==========================================
 
@@ -1005,6 +1005,7 @@
     </script>
 </body>
 </html>
+
 
 
 
