--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
             { id: 39, type: '原蟲', img: "images/39.jpg", ans: ["Cyst of Entamoeba coli", "Cyst form of Entamoeba coli"], desc: "大腸阿米巴的囊體 5顆以上的核就能夠判斷為大腸阿米巴" },
             { id: 41, type: '原蟲', img: "images/41.jpg", ans: ["Cyst of Endolimax nana", "Cyst form of Endolimax nana"], desc: "微小阿米巴的囊體 ，四顆細胞核都像魚眼睛(??)；痢疾阿米巴的中間有機會看到兩條棒狀染色體，但微小阿米巴只會看到四顆細胞核" },
             { id: 42, type: '原蟲', img: "images/42.jpg", ans: ["Cyst of Entamoeba histolytica", "Cyst form of Entamoeba histolytica"], desc: "痢疾阿米巴的囊體 兩顆細胞核)與棒狀染色體" },
-            { id: 43, type: '原蟲', img: "images/43.jpg", ans: ["Trophozoite of Entamoeba histolytica", "Trophozoite form of Entamoeba histolytica"], desc: "" },
-            { id: 44, type: '原蟲', img: "images/44.jpg", ans: ["Cyst of Iodamoeba butschlii", "Cyst form of Iodamoeba butschlii"], desc: "" },
+            { id: 43, type: '原蟲', img: "images/43.jpg", ans: ["Trophozoite of Entamoeba histolytica", "Trophozoite form of Entamoeba histolytica"], desc: "痢疾阿米巴的活動體" },
+            { id: 44, type: '原蟲', img: "images/44.jpg", ans: ["Cyst of Iodamoeba butschlii", "Cyst form of Iodamoeba butschlii"], desc: "嗜碘阿米巴的囊體 可以看見很像液泡的肝醣泡，大約佔了整個細胞面積的1/3~1/2" },
             { id: 45, type: '原蟲', img: "images/45.jpg", ans: ["Cyst of Balantidium coli", "Cyst form of Balantidium coli"], desc: "大腸纖毛蟲的囊體 形狀接近圓球狀" },
             { id: 46, type: '原蟲', img: "images/46.jpg", ans: ["Trophozoite of Balantidium coli", "Trophozoite form of Balantidium coli"], desc: "大腸纖毛蟲的活動體 形狀呈橢圓狀 " },
             { id: 47, type: '原蟲', img: "images/47.jpg", ans: ["Cyst of Giardia lamblia", "Cyst form of Giardia lamblia"], desc: "梨形鞭毛蟲的囊體 中間有一中柱把四顆核兩兩隔開" },
@@ -1005,6 +1005,7 @@
     </script>
 </body>
 </html>
+
 
 
 
