--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="modal-content">
             <h3 style="margin-top:0;">⏱️ 選擇挑戰秒數</h3>
             <button class="timer-btn btn-40s" onclick="confirmRanked(40)">40 秒 (標準)</button>
-            <button class="timer-btn btn-50s" onclick="confirmRanked(50)">50 秒 (寬鬆)</button>
+            <button class="timer-btn btn-50s" onclick="confirmRanked(50)">50 秒 (玻片被動到了)</button>
             <button class="timer-btn btn-cancel" onclick="closeTimerModal()">取消</button>
         </div>
     </div>
@@ -1005,6 +1005,7 @@
     </script>
 </body>
 </html>
+
 
 
 
