刪了egg 加了 capsule

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of Trichuris trichiura"], desc: "雄鞭蟲 頭細 尾端有尖尖的交尾刺" },
             { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of Trichuris trichiura"], desc: "雌鞭蟲成蟲 頭細 尾圓鈍" },
             { id: 9, type: '線蟲', img: "images/9.jpg", ans: ["Egg of Enterobius vermicularis"], desc: "蟯蟲卵 雙層殼且不對稱 =  一邊扁一邊凸" },
-            { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg Egg of Enterobius vermicularis"], desc: "蟯蟲胎蟲卵 卵殼中出現胎蟲(一或多條摺痕)" },
+            { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg of Enterobius vermicularis"], desc: "蟯蟲胎蟲卵 卵殼中出現胎蟲(一或多條摺痕)" },
             { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of Enterobius vermicularis", "female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "蟯蟲的雌成蟲 頭端兩側有角質化鼓起的側翼 顯微鏡下呈紅色" },
             { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of Ascaris lumbricoides"], desc: "受精蛔蟲卵 外型圓，卵細胞顆粒細小且排列緊密，波浪狀外膜分布均勻" },
             { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of Ascaris lumbricoides"], desc: "未受精蛔蟲卵 外型橢圓，卵細胞顆粒較粗大且排列較鬆散，波浪狀外膜較不平" },
@@ -519,7 +519,7 @@
             { id: 62, type: '絛蟲', img: "images/62.jpg", ans: ["Scolex of Taenia solium"], desc: "有鉤絛蟲的頭節 圓形吸盤(4個) " },
             { id: 63, type: '絛蟲', img: "images/63.jpg", ans: ["Egg of Hymenolepis diminuta"], desc: "縮小包膜絛蟲 正圓形" },
             { id: 64, type: '絛蟲', img: "images/64.jpg", ans: ["Egg of Hymenolepis nana"], desc: "短小包膜絛蟲 橢圓形 " },
-            { id: 65, type: '絛蟲', img: "images/65.jpg", ans: ["Egg of Dipylidium caninum"], desc: "犬複殖器絛蟲的卵 capsule相對比較大、長得像葡萄" },
+            { id: 65, type: '絛蟲', img: "images/65.jpg", ans: ["Egg capsule of Dipylidium caninum"], desc: "犬複殖器絛蟲的卵 capsule相對比較大、長得像葡萄" },
             { id: 66, type: '絛蟲', img: "images/66.jpg", ans: ["Proglottid of Dipylidium caninum"], desc: "犬複殖器絛蟲的體節 " },
             { id: 67, type: '絛蟲', img: "images/67.jpg", ans: ["Hydatid cyst of Echinococcus granulosus"], desc: "單胞絛蟲的水囊" },
             { id: 68, type: '絛蟲', img: "images/68.jpg", ans: ["Protoscolex of Echinococcus granulosus"], desc: "單胞絛蟲的原始頭節 " }
@@ -1005,6 +1005,7 @@
     </script>
 </body>
 </html>
+
 
 
 
