--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             { id: 27, type: '吸蟲', img: "images/27.jpg", ans: ["Adult worm of Echinostoma revolutum"], desc: "外旋棘口吸蟲成蟲 腹吸盤在中間靠前" },
             { id: 28, type: '吸蟲', img: "images/28.jpg", ans: ["Egg of Paragonimus westermani"], desc: "衛氏肺吸蟲卵 和薑片蟲卵類似，最大的不同就在於衛氏肺吸蟲有明顯卵蓋、且卵比較小" },
             { id: 29, type: '吸蟲', img: "images/29.jpg", ans: ["Adult worm of Paragonimus westermani"], desc: "衛氏肺吸蟲成蟲" },
-            { id: 30, type: '吸蟲', img: "images/30.jpg", ans: ["Section of liver infected with Paragonimus westermani"], desc: "" },
+            { id: 30, type: '吸蟲', img: "images/30.jpg", ans: ["Section of lung infected with Paragonimus westermani"], desc: "" },
             { id: 31, type: '吸蟲', img: "images/31.jpg", ans: ["Adult worm of Fasciola hepatica"], desc: "牛羊肝吸蟲成蟲 一坨黑黑的子宮" },
             { id: 32, type: '吸蟲', img: "images/32.jpg", ans: ["Adult worm of Clonorchis sinensis"], desc: "中華肝吸蟲的成蟲 生殖器官分隔明確" },
             { id: 33, type: '吸蟲', img: "images/33.jpg", ans: ["Egg of Clonorchis sinensis"], desc: "中華肝吸蟲蟲卵 小型吸蟲卵 長橢圓形、厚殼" },
@@ -1020,3 +1020,4 @@
     </script>
 </body>
 </html>
+
