--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             { id: 54, type: '原蟲', img: "images/54.jpg", ans: ["Mature trophozoite of Plasmodium vivax", "Mature trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲成熟的活動體 明顯的薛氏點(Schuffner’s dots)," },
             { id: 55, type: '原蟲', img: "images/55.jpg", ans: ["Early trophozoite of Plasmodium falciparum", "Early trophozoite form of Plasmodium falciparum"], desc: "惡性瘧原蟲早期活動體 考跑台時若是看到一個紅血球中有兩隻蟲，就寫惡性瘧原蟲、戒指環也比較小一點" },
             { id: 56, type: '原蟲', img: "images/56.jpg", ans: ["Trophozoite of Toxoplasma gondii", "Trophozoite form of Toxoplasma gondii"], desc: "弓蟲活動體" },
-            { id: 57, type: '絛蟲', img: "images/57.jpg", ans: ["Egg of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的蟲卵 外觀呈橢圓、卵圓形，有許多卵細胞、頭端有裂縫=卵蓋 (微調焦距)" },
+            { id: 57, type: '絛蟲', img: "images/57.jpg", ans: ["Egg of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的蟲卵 外觀呈橢圓、卵圓形，有許多卵細胞、卵蓋比薑片蟲明顯" },
             { id: 58, type: '絛蟲', img: "images/58.jpg", ans: ["Gravid proglottid of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的受孕體節" },
             { id: 59, type: '絛蟲', img: "images/59.jpg", ans: ["Egg of Taenia spp."], desc: "有鉤絛蟲卵 像甜甜圈、輪胎 " },
             { id: 60, type: '絛蟲', img: "images/60.jpg", ans: ["Gravid proglottid of Taenia solium"], desc: "受孕體節+有鉤絛蟲 Taenia solium 分支數較少；Taenia saginata 分支數較多" },
@@ -1048,4 +1048,5 @@
     </script>
 </body>
 </html>
+
 
