--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             { id: 51, type: '原蟲', img: "images/51.jpg", ans: ["Promastigote of Leishmania spp.", "Promastigote form of Leishmania spp."], desc: "利什曼蟲的前鞭毛體" },
             { id: 52, type: '原蟲', img: "images/52.jpg", ans: ["Trypomastigote of Trypanosoma spp.", "Trypomastigote form of Trypanosoma spp."], desc: "錐蟲的錐鞭毛體 背景中的圓圈是紅血球、" },
             { id: 53, type: '原蟲', img: "images/53.jpg", ans: ["Early trophozoite of Plasmodium vivax", "Early trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲早期活動體 跟其他瘧原蟲比起來,間日瘧原蟲的環較大圈" },
-            { id: 54, type: '原蟲', img: "images/54.jpg", ans: ["Mature trophozoite of Plasmodium vivax", "Mature trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲成熟的活動體 明顯的薛氏點(Schuffner’s dots)," },
+            { id: 54, type: '原蟲', img: "images/54.jpg", ans: ["Mature trophozoite of Plasmodium vivax", "Mature trophozoite form of Plasmodium vivax"], desc: "間日瘧原蟲成熟的活動體 明顯的薛氏點(Schuffner’s dots),；右下為厚血液抹片 火焰狀" },
             { id: 55, type: '原蟲', img: "images/55.jpg", ans: ["Early trophozoite of Plasmodium falciparum", "Early trophozoite form of Plasmodium falciparum"], desc: "惡性瘧原蟲早期活動體 考跑台時若是看到一個紅血球中有兩隻蟲，就寫惡性瘧原蟲、戒指環也比較小一點" },
             { id: 56, type: '原蟲', img: "images/56.jpg", ans: ["Trophozoite of Toxoplasma gondii", "Trophozoite form of Toxoplasma gondii"], desc: "弓蟲活動體" },
             { id: 57, type: '絛蟲', img: "images/57.jpg", ans: ["Egg of Diphyllobothrium latum"], desc: "廣節裂頭絛蟲的蟲卵 外觀呈橢圓、卵圓形，有許多卵細胞、卵蓋比薑片蟲明顯" },
@@ -1048,5 +1048,6 @@
     </script>
 </body>
 </html>
+
 
 
