--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
             
             <p>選擇練習範圍</p>
             <select id="category-select">
-                <option value="all">🔥 我全都要</option>
-                <option value="egg">🥚 蟲卵專區</option>
-                <option value="線蟲">🪱 線蟲 </option>
-                <option value="絛蟲">🎗️ 絛蟲 </option>
-                <option value="吸蟲">🍃 吸蟲 </option>
-                <option value="原蟲">🦠 原蟲 </option>
+                <option value="all">🔥 我全都要 x68</option>
+                <option value="egg">🥚 蟲卵專區 x19</option>
+                <option value="線蟲">🪱 線蟲 x23</option>
+                <option value="絛蟲">🎗️ 絛蟲 x12</option>
+                <option value="吸蟲">🍃 吸蟲 x15</option>
+                <option value="原蟲">🦠 原蟲 x18</option>
             </select>
 
             <p>設定題數 (跑台預設 10 題)</p>
@@ -1048,6 +1048,7 @@
     </script>
 </body>
 </html>
+
 
 
 
